--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -402,3 +402,14 @@ entrypoint = "./functions/webauthn-verify/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/webauthn-verify/*.html" ]
+
+[functions.webauthn-auth-challenge]
+enabled = true
+verify_jwt = true
+import_map = "./functions/webauthn-auth-challenge/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/webauthn-auth-challenge/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/webauthn-auth-challenge/*.html" ]
